Issue #1079 - Build failure due to failing test in wro4j-maven-plugin * Fixed a build issue with OpenJDK 9